# kantovision

./: .gitignore  README.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  railway.toml  schema.sql
backend/app/: config.py  database.py  dependencies.py  logging_config.py  main.py  schemas.py
backend/app/battle/: accuracy.py  actions.py  damage.py  db.py  engine.py  enums.py  manager.py  matchmaking.py  pipeline.py  state.py  stats.py  status.py  typechart.py
backend/app/battle/effects/: __init__.py  base.py  registry.py
backend/app/battle/effects/abilities/: __init__.py  contact.py  damage_modifiers.py  defensive.py  misc.py  speed_modifiers.py  (+3 more)
backend/app/repositories/: ability_repo.py  item_repo.py  move_repo.py  nature_repo.py  pokemon_repo.py
backend/app/routers/: battles.py  health.py  pokedex.py  profiles.py  scan.py  teams.py
backend/app/services/: classifier.py
backend/app/sockets/: battle.py  caches.py  connections.py  handlers.py  message_types.py  rate_limiter.py  serializers.py  tickets.py  timers.py
backend/scripts/: export_onnx.py  ingest_pokemon.py
backend/tests/: conftest.py  helpers.py  test_abilities.py  test_accuracy.py  test_battle_with_db.py  test_battle_ws.py  test_damage.py  test_engine.py  test_forced_switch.py  test_hazards.py  test_items.py  test_manager.py  test_matchmaking.py  test_move_effects.py  test_move_repo.py  test_pokedex_router.py  test_pokemon_repo.py  test_stat_stages.py  test_status.py  test_switching.py  test_tickets.py  test_weather.py
(+80 files in other folders)
